tianlitao-添加其余静态页面

--- a/10062.htm
+++ b/10062.htm
@@ -1827,7 +1827,7 @@
     </div>
     <div class="news_box">
     <p>
-    </p><p style="text-align: center;"><img src="./10062_files/nil_class-下载-2c34ed3691d3ea180c7950b9e717ea29.png" _src="http://10.212.139.83:4000/uploads/umeditor/2017-06-15/nil_class-%E4%B8%8B%E8%BD%BD-2c34ed3691d3ea180c7950b9e717ea29.png"></p><p style="text-align: center;">扫描付款后可查看，加二维码</p>
+    </p><p style="text-align: center;"><img style="width: 500px" src="./sh_articles_files/ali_pay.jpg" _src="http://10.212.139.83:4000/uploads/umeditor/2017-06-15/nil_class-%E4%B8%8B%E8%BD%BD-30e4bf7b57256181d13e3f88b4890841.png"></p><p style="text-align: center;">扫描付款后可查看，加二维码</p>
     <p></p>
     </div>
 </div>
