--- a/sh_articles.htm
+++ b/sh_articles.htm
@@ -1823,17 +1823,38 @@
   </div>
   <div class="list_main_a">
   <ul>
-
-      <li>
-        <a target="_blank" href="./10062.htm">
-             2016年第四季度电商行业指数（10元/份）
-             <span class="fr">2017-01-20</span>
-</a>      </li>
       <li>
         <a target="_blank" href="./10061.htm">
              2017年第一季度电商行业指数（10元/份）
              <span class="fr">2017-04-15</span>
-</a>      </li>
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="./10062.htm">
+             2016年第四季度电商行业指数（10元/份）
+             <span class="fr">2017-01-20</span>
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="./10060.htm">
+             2016年第三季度电商行业指数（10元/份）
+             <span class="fr">2016-10-15</span>
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="./10059.htm">
+             2016年第二季度电商行业指数（10元/份）
+             <span class="fr">2016-07-15</span>
+        </a>
+      </li>
+      <li>
+        <a target="_blank" href="./10058.htm">
+             2016年第一季度电商行业指数（10元/份）
+             <span class="fr">2016-04-15</span>
+        </a>
+      </li>
+
+
   </ul>
   </div>
 
