--- a/10061.htm
+++ b/10061.htm
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0063)http://10.212.139.83:4000/articles/10061.html?category_id=10000 -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>sh测试站</title>
-    <meta content="神华采购电子商务平台" name="description">
-    <meta content="神华采购电子商务平台" name="keywords">
+    <title>神华e购网</title>
+    <meta content="神华e购网" name="description">
+    <meta content="神华e购网" name="keywords">
       <link rel="stylesheet" media="screen" href="./10061_files/application-620d29c68f544bd62a8d9ae5cd84f84b.css">
 
       <script src="./10061_files/jquery.min.js"></script>
@@ -18,7 +18,7 @@
       <!--头部代码-->
       <div class="head_top">
   <div class="head_top_main">
-  <span>你好，欢迎来到sh测试站</span>
+  <span>你好，欢迎来到神华e购网</span>
     <!-- ajax获取登录信息 -->
     <div id="session_info" class="key">
   <span><a href="#http://127.0.0.1:3000/api/check_sign_in">神华单点登录测试</a></span>
@@ -1853,7 +1853,7 @@
 
   <div class="fotter">
   <div class="fotter_nav">
-    <span><a href="#http://10.212.139.83:4000/articles/10061.html?category_id=10000#">神华采购电子商务平台</a></span>|
+    <span><a href="#http://10.212.139.83:4000/articles/10061.html?category_id=10000#">神华e购网</a></span>|
     <span><a href="#http://10.212.139.83:4000/articles.html?category_id=10080">关于我们</a></span>|
 
     <span><a href="#http://10.212.139.83:4000/articles.html?category_id=10081">版权说明</a></span>|
@@ -1862,7 +1862,7 @@
     <span><a href="#http://10.212.139.83:4000/feedbacks/feedback_index.html">意见反馈</a></span>|
     <span><a href="http://www.shenhuagroup.com.cn/" ,="" target="_blank">友情链接</a></span>
   </div>
-<p><span>业务咨询：神华采购电子商务平台</span><span class="ml20">京ICP备15067089号</span></p>
+<p><span>业务咨询：神华采购电子商务平台</span><span class="ml20">京ICP备15067089-4号</span></p>
 <p><span>技术支持：神华信息技术有限公司</span><span class="ml20">电话：400-965-5696</span></p>
 </div>
 
