--- a/10059.htm
+++ b/10059.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0063)http://10.212.139.83:4000/articles/10061.html?category_id=10000 -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -1861,9 +1861,8 @@
     <span><a href="#http://10.212.139.83:4000/articles/10061.html?category_id=10000#">法律条款</a></span>|
     <span><a href="#http://10.212.139.83:4000/feedbacks/feedback_index.html">意见反馈</a></span>|
     <span><a href="http://www.shenhuagroup.com.cn/" ,="" target="_blank">友情链接</a></span>
-  </div>
-<p><span>业务咨询：神华采购电子商务平台</span><span class="ml20">京ICP备15067089号</span></p>
-<p><span>技术支持：神华信息技术有限公司</span><span class="ml20">电话：400-965-5696</span></p>
+  </div><p><span>公司名称：神华天泓贸易有限公司 地址：北京东城区西滨河路19号</span><span class="ml20">京ICP备15067089-4号</span></p>
+<p><span>技术支持：神华信息技术有限公司</span><span class="ml20">电话：010-57336174</span></p>
 </div>
 
 
