--- a/sh_articles.htm
+++ b/sh_articles.htm
@@ -1896,8 +1896,8 @@
     <span><a href="#http://10.212.139.83:4000/feedbacks/feedback_index.html">意见反馈</a></span>|
     <span><a href="http://www.shenhuagroup.com.cn/" ,="" target="_blank">友情链接</a></span>
   </div>
-<p><span>业务咨询：神华采购电子商务平台</span><span class="ml20">京ICP备15067089-4号</span></p>
-<p><span>技术支持：神华信息技术有限公司</span><span class="ml20">电话：400-965-5696</span></p>
+<p><span>公司名称：神华天泓贸易有限公司 地址：北京东城区西滨河路19号</span><span class="ml20">京ICP备15067089-4号</span></p>
+<p><span>技术支持：神华信息技术有限公司</span><span class="ml20">电话：010-57336174</span></p>
 </div>
 
 
