增加域名错误公告

--- a/10063.htm
+++ b/10063.htm
@@ -1,21 +1,21 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0052)http://10.212.139.83:4000/articles?category_id=10000 -->
+<!-- saved from url=(0063)http://10.212.139.83:4000/articles/10062.html?category_id=10000 -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <title>神华e购网</title>
     <meta content="神华e购网" name="description">
     <meta content="神华e购网" name="keywords">
-      <link rel="stylesheet" media="screen" href="./sh_articles_files/application-620d29c68f544bd62a8d9ae5cd84f84b.css">
+      <link rel="stylesheet" media="screen" href="./10062_files/application-620d29c68f544bd62a8d9ae5cd84f84b.css">
 
-      <script src="./sh_articles_files/jquery.min.js"></script>
-      <script src="./sh_articles_files/application-6a2b862f36af80bc8e14bc29cb29d4df.js"></script><link rel="stylesheet" href="./sh_articles_files/layer-3a4f2ad2153ddef4db83b1a97a3e75b6.css" id="layui_layer_layercss">
+      <script src="./10062_files/jquery.min.js"></script>
+      <script src="./10062_files/application-6a2b862f36af80bc8e14bc29cb29d4df.js"></script><link rel="stylesheet" href="./10062_files/layer-3a4f2ad2153ddef4db83b1a97a3e75b6.css" id="layui_layer_layercss">
 
       <meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="HwecETcxdmXyYXJ3nXcsi8uaJCBugCGrP6oPxWc9JbWkBStdll5J9qLZJof3E+WGG3J68jT6TRDpUS3SSyYlyg==">
+<meta name="csrf-token" content="VULmli/GSUanltIp5jxgJ3amZExkUu4zsTGzGI/afiTuQFHajql21fcuhtmMWKkqpk46nj4ogohnypEPo8F+Ww==">
   </head>
 
   <body>
-<!--头部代码-->
+      <!--头部代码-->
 <div class="head_top">
   <div class="head_top_main">
   <span>你好，欢迎来到神华e购网</span>
@@ -23,7 +23,7 @@
 </div>
 
 <div class="head_mid">
-  <div class="logo"><a href="#http://10.212.139.83:4000/articles?category_id=10000#"></a></div>
+  <div class="logo"><a href="#http://10.212.139.83:4000/articles/10062.html?category_id=10000#"></a></div>
   <div class="search">
     <form style="display: inline;float:right;" id="search_form" action="http://10.212.139.83:4000/search.html" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="✓" maxlength="200">
       <input type="hidden" name="o" id="o" value="" maxlength="200">
@@ -80,7 +80,7 @@
       <h1>全部商品分类</h1>
     </div>
         <div class="all-goods" id="all-goods" style="display: none;">
-            <div class="item lbypjxfqc png_item" style="background-position: 0px 0%;">
+            <div class="item lbypjxfqc png_item">
       <div class="product">
         <h3>
           <span class=""><a href="#http://10.212.139.83:4000/channel/11205.html">劳保用品及消防器材</a></span>
@@ -135,7 +135,7 @@
         </div>
       </div>
     </div>
-    <div class="item gj png_item" style="background-position: 0px 0%;">
+    <div class="item gj png_item">
       <div class="product">
         <h3>
           <span class=""><a href="#http://10.212.139.83:4000/channel/11202.html">工具</a></span>
@@ -356,7 +356,7 @@
         </div>
       </div>
     </div>
-    <div class="item hgyljcp png_item" style="background-position: 0px 0%;">
+    <div class="item hgyljcp png_item">
       <div class="product">
         <h3>
           <span class=""><a href="#http://10.212.139.83:4000/channel/11194.html">化工原料及产品</a></span>
@@ -616,7 +616,7 @@
         </div>
       </div>
     </div>
-    <div class="item yqyb png_item" style="background-position: 0px 0%;">
+    <div class="item yqyb png_item">
       <div class="product">
         <h3>
           <span class=""><a href="#http://10.212.139.83:4000/channel/11187.html">仪器仪表</a></span>
@@ -1035,7 +1035,7 @@
         </div>
       </div>
     </div>
-    <div class="item rydq png_item" style="background-position: 0px 0%;">
+    <div class="item rydq png_item">
       <div class="product">
         <h3>
           <span class=""><a href="#http://10.212.139.83:4000/channel/11203.html">日用电器</a></span>
@@ -1099,7 +1099,7 @@
         </div>
       </div>
     </div>
-    <div class="item fjgdpj png_item" style="background-position: 0px 0%;">
+    <div class="item fjgdpj png_item">
       <div class="product">
         <h3>
           <span class=""><a href="#http://10.212.139.83:4000/channel/11189.html">阀及管道配件</a></span>
@@ -1328,7 +1328,7 @@
         </div>
       </div>
     </div>
-    <div class="item dxdl png_item" style="background-position: 0px 0%;">
+    <div class="item dxdl png_item">
       <div class="product">
         <h3>
           <span class=""><a href="#http://10.212.139.83:4000/channel/11183.html">电线电缆</a></span>
@@ -1448,7 +1448,7 @@
         </div>
       </div>
     </div>
-    <div class="item ssd png_item" style="background-position: 0px 0%;">
+    <div class="item ssd png_item">
       <div class="product">
         <h3>
           <span class=""><a href="#http://10.212.139.83:4000/channel/11188.html">输送带</a></span>
@@ -1756,7 +1756,7 @@
 
     <div id="jsddm" class="jsddm">
       <li class="jsddmli"><a href="./index.htm" class="other">首 页</a></li>
-          <li class="jsddmli"><a href="#http://10.212.139.83:4000/articles?category_id=10000">行业资讯(付费)</a></li>
+          <li class="jsddmli"><a href="./sh_articles.htm">行业资讯(付费)</a></li>
 <li class="jsddmli"><a href="#http://10.212.139.83:4000/articles?category_id=10086">询价专区</a></li>
 <li class="jsddmli"><a href="#http://10.212.139.83:4000/articles?category_id=10087">竞价专区</a></li>
 <li class="jsddmli"><a href="#http://10.212.139.83:4000/articles/tender">招标公告</a></li>
@@ -1777,79 +1777,52 @@
     <!--面包屑代码开始-->
 <div class="crumbs">
   当前位置：<a href="./index.htm">首页</a> &gt;
-  行业资讯（付费）
-<!--   <a href="/articles?category_id=15">通知公告</a -->
+  <a href="./sh_articles.htm">行业资讯（付费）</a> &gt;
+  <a href="#http://10.212.139.83:4000/articles/10062.html?category_id=10000#">公告详情</a>
 </div>
-<!--面包屑代码结束-->
 
+<!--面包屑代码结束-->
 <!--商品详情代码开始-->
 <div class="jianju_x"></div>
-<div class="report_box">
-  <div class="report_head">
-    <div class="fl" style="margin-left: -11px;"> 公告标题</div>
-    <div class="fr" style="margin-right: -128px;">发布时间</div>
-  </div>
-  <div class="list_main_a">
-  <ul>
-      <li>
-        <a target="_blank" href="./10063.htm">
-             关于无法登录电商平台的解决方案
-             <span class="fr">2017-08-07</span>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="./10061.htm">
-             2017年第一季度电商行业指数（10元/份）
-             <span class="fr">2017-04-15</span>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="./10062.htm">
-             2016年第四季度电商行业指数（10元/份）
-             <span class="fr">2017-01-20</span>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="./10060.htm">
-             2016年第三季度电商行业指数（10元/份）
-             <span class="fr">2016-10-15</span>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="./10059.htm">
-             2016年第二季度电商行业指数（10元/份）
-             <span class="fr">2016-07-15</span>
-        </a>
-      </li>
-      <li>
-        <a target="_blank" href="./10058.htm">
-             2016年第一季度电商行业指数（10元/份）
-             <span class="fr">2016-04-15</span>
-        </a>
-      </li>
-
-
-  </ul>
-  </div>
-
-<script type="text/javascript">
-  $(function(){
-    $(document).on('click', '.to_page', function(){
-      var a_page = $(this).prev().val();
-      if(!isEmpty(a_page)){
-       url = $(this).parent().prev().prev().find("a")[0]["href"].replace("page=1", "page=" + a_page);
-       window.location.href = url;
-      }
-
-    });
-  })
-</script>
-
-
-  <div class="clear"></div>
+<div class="news_desc">
+<div class="zw_c_c_title">关于无法登录电商平台的解决方案</div>
+    <div class="zw_c_c_qx">
+    <p>
+      <span>发布人：sh_admin</span>
+      <span>发布单位：神华信息公司</span>
+      <span>发布时间：2017-08-07 09:03:17</span>
+      </p>
+    </div>
+    <div class="news_box">
+    <p>
+    </p>
+    <p style="text-align: center;">
+    <p style="text-indent: 2em;">各单位连接集团内网后，打开电商平台网址www.meie.com.cn，网站左上角显示：“您好，欢迎来到神华e购网（内网）”，必须含有‘内网’字样,若无‘内网’字样，请联系本单位网络管理员，并按以下方法进行网络配置。</p>
+    <p style="text-indent: 2em;">如果本公司拥有自己的DNS服务器，请进行以下配置（方法一、方法二均可）：</p>
+    <p style="text-indent: 2em;">方法一、 将以下域名配置到本公司DNS服务器上：</p>
+    <img style="width: 500px;" class="aligncenter" src="./sh_articles_files/dnssolution.png"></p>
+    <p style="text-indent: 2em;">方法二、配置主域（meie.com.cn) 条件转发到集团DNS服务器</p>
+    <p style="text-indent: 2em;">如果本公司使用集团DNS服务器进行域名解析，则用户可直接使用域名（www.meie.com.cn）访问平台首页；如果仍有域名解析问题，请联系集团域名管理工程师（蒋吉明 010-57595375/18910569980）。</p>
+    <p style="text-align: right; text-indent: 2em;">采购电商项目组</p>
+    <p style="text-align: right; text-indent: 2em;">2017年8月7日</p>
+    </div>
 </div>
 <!--商品详情代码结束-->
-<div class="jianju_x"></div>
+
+<style type="text/css">
+  a.file_a{
+    color: #1e5494;
+
+  }
+  a.file_a:hover{
+    text-decoration: underline;
+  }
+  .aligncenter {
+  clear: both;
+  display: block;
+  margin:auto;
+  }
+</style>
 
 
     <!-- 底部 -->
@@ -1861,17 +1834,17 @@
 
   <div class="fotter">
   <div class="fotter_nav">
-    <span><a href="#http://10.212.139.83:4000/articles?category_id=10000#">神华e购网</a></span>|
+    <span><a href="#http://10.212.139.83:4000/articles/10062.html?category_id=10000#">神华e购网</a></span>|
     <span><a href="#http://10.212.139.83:4000/articles.html?category_id=10080">关于我们</a></span>|
 
     <span><a href="#http://10.212.139.83:4000/articles.html?category_id=10081">版权说明</a></span>|
-    <span><a href="#http://10.212.139.83:4000/articles?category_id=10000#">电子邮箱</a></span>|
-    <span><a href="#http://10.212.139.83:4000/articles?category_id=10000#">法律条款</a></span>|
+    <span><a href="#http://10.212.139.83:4000/articles/10062.html?category_id=10000#">电子邮箱</a></span>|
+    <span><a href="#http://10.212.139.83:4000/articles/10062.html?category_id=10000#">法律条款</a></span>|
     <span><a href="#http://10.212.139.83:4000/feedbacks/feedback_index.html">意见反馈</a></span>|
     <span><a href="http://www.shenhuagroup.com.cn/" ,="" target="_blank">友情链接</a></span>
   </div>
-<p><span>公司名称：神华天泓贸易有限公司 地址：北京东城区西滨河路19号</span><span class="ml20">京ICP备15067089-4号</span></p>
-<p><span>技术支持：神华信息技术有限公司</span><span class="ml20">电话：010-57336174</span></p>
+<p><span>业务咨询：神华采购电子商务平台</span><span class="ml20">京ICP备15067089-4号</span></p>
+<p><span>技术支持：神华信息技术有限公司</span><span class="ml20">电话：400-965-5696</span></p>
 </div>
 
 
