--- a/10062.htm
+++ b/10062.htm
@@ -1830,8 +1830,8 @@
     <span><a href="#http://10.212.139.83:4000/feedbacks/feedback_index.html">意见反馈</a></span>|
     <span><a href="http://www.shenhuagroup.com.cn/" ,="" target="_blank">友情链接</a></span>
   </div>
-<p><span>业务咨询：神华采购电子商务平台</span><span class="ml20">京ICP备15067089-4号</span></p>
-<p><span>技术支持：神华信息技术有限公司</span><span class="ml20">电话：400-965-5696</span></p>
+<p><span>运营单位：神华天泓贸易有限公司</span><span class="ml20">京ICP备15067089-4号</span></p>
+<p><span>技术支持：神华和利时信息技术有限公司</span><span class="ml20">电话: 010-57595261</span><span class="ml20">QQ群：629920489</span></p>
 </div>
 
 
