--- a/index.htm
+++ b/index.htm
@@ -2660,8 +2660,8 @@
       <p><a href="#http://10.212.139.83:4000/#">监督举报</a></p>
     </li>
     <li class="zxkf">
-      <p><a href="#http://10.212.139.83:4000/#"><img src="./sh测试站_files/kefu-bda109bc05cdb411c0dcb8635eec2e11.png" alt="Kefu"></a></p>
-      <p style="padding-left:48px;"><a href="#http://10.212.139.83:4000/#"><img src="./sh测试站_files/phone-f54c4f82b58761576ad57b8452a5c39f.png" alt="Phone"></a></p>
+      <p><a href="#"><img src="./sh测试站_files/kefu-699e6093e40e0f154dde5955c849f600.jpg" alt="Kefu"></a></p>
+      <!-- <p style="padding-left:48px;"><a href="#http://10.212.139.83:4000/#"><img src="./sh测试站_files/phone-f54c4f82b58761576ad57b8452a5c39f.png" alt="Phone"></a></p> -->
     </li>
   </ul>
 </div>
@@ -2681,8 +2681,8 @@
     <span><a href="#http://10.212.139.83:4000/feedbacks/feedback_index.html">意见反馈</a></span>|
     <span><a href="http://www.shenhuagroup.com.cn/" ,="" target="_blank">友情链接</a></span>
   </div>
-<p><span>公司名称：神华天泓贸易有限公司 地址：北京东城区西滨河路19号</span><span class="ml20">京ICP备15067089-4号</span></p>
-<p><span>技术支持：神华信息技术有限公司</span><span class="ml20">电话：010-57336174</span></p>
+<p><span>运营单位：神华天泓贸易有限公司</span><span class="ml20">京ICP备15067089-4号</span></p>
+<p><span>技术支持：神华和利时信息技术有限公司</span><span class="ml20">电话: 010-57595261</span><span class="ml20">QQ群：629920489</span></p>
 </div>
 
 
